# stl

./: .gitignore  CMakeLists.txt
src/: core.c  core.h  line.c  line.h  model.h  plane.c  plane.h  stl.h  triangle.c  triangle.h  vec3.c  vec3.h
test/: main.c
